[tool.poetry]
name = "brain_games"
version = "0.1.0"
description = ""
authors = ["Artem <witcher9012@rambler.ru>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
